kubernetes/03-butterfly-centos-ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: butterfly-centos
#  annotations:
#    kubernetes.io/ingress.class: nginx
spec:
#  tls:
#  - hosts:
#    - butterfly.example.com
#    secretName: my-ingress-tls
  rules:
  - host: butterfly.example.com
    http:
      paths:
        - path: /
          backend:
            serviceName: butterfly-centos
            servicePort: 80
